# XY_TASK

./: .gitignore  README.md  app_webview.py  main.py  main.spec  pyproject.toml
config/: caminhos.py  single_instance.py  version.py
core/: APURACAO_PIS_COFINS.py  CNPJ_API.py  DIMOB.py  FATURAMENTO.py  NOTAS.py  NOTAS_pdf.py  PRN_T.py  PROVISAO.py  RAZAO_DFC.py  RAZAO_resumo.py
data/: BANCOCNPJ.db  DADOS_APURACAO.json  codigos.json
data/seed/: DADOS_APURACAO.json  codigos.json
frontend/: README.md  index.html  package-lock.json  package.json  pokedex-data-30-05-2026.json  vite.config.ts
frontend/docs/: EXCEL_PRN_API.md  LOGS_API.md  NOTAS_FATURAMENTO_API.md  PESQUISAR_CNPJ_API.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apuracao.ts  backup.ts  client.ts  cnpjBanco.ts  cnpjPesquisa.ts  codigosProvisoes.ts  dimob.ts  excelPrn.ts  logs.ts  notas.ts  porcentagem.ts  provisoes.ts  razao.ts  select.ts  socket.ts  types.ts  version.ts
frontend/src/context/: AppSettingsContext.tsx  AppSocketContext.tsx  LicenseContext.tsx  LogsContext.tsx  LogsPanelVisibilityContext.tsx  (+1 more)
models/: banco_cnpj.py  banco_fat.py  codigos.py  dados_apuracao.py
routes/: apuracao_routes.py  backup_routes.py  cnpj_routes.py  dimob_routes.py  notas_routes.py  prn_routes.py  provisoes_routes.py  razao_routes.py
services/: apuracao_service.py  backup_service.py  cnpj_service.py  codigos_service.py  dimob_service.py  notas_service.py  porcentagem_service.py  prn_service.py  provisoes_service.py  razao_service.py  update_check.py
websocket/: emitter.py
(+48 files in other folders)
