[project]
name = "xy-task"
version = "1.0.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "jpype1==1.5.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyinstaller>=6.20.0",
    "pypdf2>=3.0.1",
    "pywebview>=6.2.1",
    "requests>=2.34.2",
    "tabula-py==2.10.0",
    "unidecode>=1.4.0",
]
